
TODO:
	show MIDI length in seconds.
	TextTrackWriter
	FingeringNavigator
		extend & squeeze costs



2017.9.23	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/FingeringNavigator: finger states generation added.

	+	Pianist/FingeringNavigator: added time cost statistics.
	+	Pianist/FingeringNavigator: added static context.


2017.9.22	K.L.	<k.l.lambda@gmail.com>

	+	FingeringNavigatorViewer: refined controller bar.

	+	FingeringGenerator: added track name display.


2017.9.21	K.L.	<k.l.lambda@gmail.com>

	>	MIDIPiano: fixed note off missing issue.
	>	NotationUtils: fixed note off missing issue.

	*!	MIDI note on event with 0 velocity means note off.

	+	Pianist/FingeringNavigator: added LeafSequence.


2017.9.19	K.L.	<k.l.lambda@gmail.com>

	+	FingeringGenerator: avoid fingering constraints overwrited after saving.


2017.9.18	K.L.	<k.l.lambda@gmail.com>

	+	FingeringNavigatorViewer: save source in storage.
	+	FingeringNavigatorViewer: file drag & drop added.

	+	Pianist/FingeringNavigator: constraits navigation implemented.

	+	NotationUtils: added fingering parsing in parseMidiTrack.

	>	Pianist/FingeringNavigator: added MinStepCount.

	+	Pianist/FingeringNavigator: candidate node added.

	>	Pianist/FingeringNavigator: refined progress bar.

	>	FingeringNavigatorViewer: refined focus scroll.


2017.9.17	K.L.	<k.l.lambda@gmail.com>

	>	Pianist/FingeringNavigator: EstimatedCosts update added.

	>	FingeringNavigatorViewer: refined styles.

	>	Pianist/FingeringNavigator: optimized current node searching.

	+	FingeringNavigatorViewer: added keyboard shortcuts.


2017.9.16	K.L.	<k.l.lambda@gmail.com>

	+	FingeringNavigatorViewer: step controller implemented.

	+	FingeringNavigatorViewer: created.

	+	Pianist/FingeringNavigator: added step index for tree node.


2017.9.15	K.L.	<k.l.lambda@gmail.com>

	+	FingeringGenerator: added adaption speed.

	+	Pianist/FingeringNavigator: refined structure.

	+	FingeringGenerator: added tree dump.
